# rstyping

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.js  deploy.sh  index.html  index.js  package.json  style.css  webpack.config.js
crate/: Cargo.toml  module.mjs
crate/src/: app.rs  lib.rs
crate/src/app/: text.rs
src/: app.rs  lib.rs  main.rs  texts.rs
src/app/: util.rs
static/: index.html  index.js  style.css
