[package]
name = "rstyping"
version = "0.1.0"
authors = ["broot <bananarobot@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rstyping"
path = "src/main.rs"

[lib]
name = "rstyping"
path = "src/lib.rs"

[dependencies]
hangul = "0.1.3"
instant = { version = "0.1.2", features = [ "stdweb" ] }
rand = { version = "0.7.2", features = ["stdweb"] }
strsim = "0.9.2"
yew = "0.10.0"
