[package]
name = "rstyping"
version = "0.1.0"
authors = ["broot5 <29516943+broot5@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
hangul = "0.1.3"
instant = { version = "0.1.2", features = [ "wasm-bindgen" ] }
rand = { version = "0.7.2", features = ["wasm-bindgen"] }
strsim = "0.9.2"
wasm-bindgen = "0.2.56"
yew = "0.10.0"
